# moos-ivp-morgan

./: README  README.md
data/: morgan_city.info
missions/minex/: alfa.moos
missions/s1_morgan_city/: alpha.bhv  alpha.moos  alpha_simulated.moos
missions/s1_morgan_city_signalk/: alpha.bhv  alpha.moos
scripts/: Breaking down the message.txt  activate_nmea.py  can_documentation.txt  get_coordinates.py  raspberry_client.py  test_server_raw.py  test_server_raw_6.py  test_server_raw_7.py  udp_listener.py  udp_receiver.py
src/: CMakeLists.txt
src/iDivisorNMEA/: DivisorNMEA.cpp
src/iNMEA/: CMakeLists.txt  NMEA.cpp  NMEA.h  NMEA_Info.cpp  NMEA_Info.h  main.cpp
src/iRaspberryServer/: CMakeLists.txt  RaspberryServer.cpp  RaspberryServer.h  RaspberryServer_Info.cpp  RaspberryServer_Info.h  main.cpp
src/iSignalK/: CMakeLists.txt  SignalK.cpp  SignalK.h  SignalK_Info.cpp  SignalK_Info.h  main.cpp
src/planchaPID/: heading_pid_parameters.txt  lanchaPID.cpp  lanchaPID.h  planchaPID.moos
